message not available

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 /******* Bootstrap Theming ********/
 
-$primary: #0BCEAF;
-$secondary: #6c757d;
+$primary: #15ff00;
+$secondary: #00f7ff;
 $light: #ffffff;
 $dark: #343a40;
 
