message not available

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 /******* Bootstrap Theming ********/
 
-$primary: #15ff00;
-$secondary: #00f7ff;
+$primary: #040669;
+$secondary: #00ff00;
 $light: #ffffff;
 $dark: #343a40;
 
