--- a/css/style.css
+++ b/css/style.css
@@ -6355,7 +6355,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #040669 !important;
+  background-color: #0BCEAF !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6365,7 +6365,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #00ff00 !important;
+  background-color: #6c757d !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
